WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96540
[EFL] Compilation error in RenderThemeEfl.cpp
https://bugs.webkit.org/show_bug.cgi?id=96540
Summary
[EFL] Compilation error in RenderThemeEfl.cpp
Chris Dumez
Reported
2012-09-12 12:10:24 PDT
We get the following error on the EFL debug build bot: Building CXX object Source/WebCore/CMakeFiles/webcore_efl.dir/platform/efl/RenderThemeEfl.cpp.o Building CXX object Source/WebCore/CMakeFiles/webcore_efl.dir/platform/efl/ScrollbarEfl.cpp.o /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebCore/platform/efl/RenderThemeEfl.cpp: In member function ‘WTF::String WebCore::RenderThemeEfl::themePath() const’: /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebCore/platform/efl/RenderThemeEfl.cpp:495:14: error: passing ‘const WebCore::RenderThemeEfl’ as ‘this’ argument of ‘Evas_Object* WebCore::RenderThemeEfl::edje()’ discards qualifiers [-fpermissive] /home/buildslave-1/webkit-buildslave/efl-linux-64-debug/build/Source/WebCore/platform/efl/RenderThemeEfl.cpp:497:35: error: passing ‘const WebCore::RenderThemeEfl’ as ‘this’ argument of ‘Evas_Object* WebCore::RenderThemeEfl::edje()’ discards qualifiers [-fpermissive] make[2]: *** [Source/WebCore/CMakeFiles/webcore_efl.dir/platform/efl/RenderThemeEfl.cpp.o] Error 1
Attachments
Patch
(1.40 KB, patch)
2012-09-12 12:12 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-09-12 12:12:19 PDT
Created
attachment 163669
[details]
Patch
Thiago Marcos P. Santos
Comment 2
2012-09-12 12:32:52 PDT
Thanks for fixing Chris!
WebKit Review Bot
Comment 3
2012-09-12 12:41:23 PDT
Comment on
attachment 163669
[details]
Patch Clearing flags on attachment: 163669 Committed
r128350
: <
http://trac.webkit.org/changeset/128350
>
WebKit Review Bot
Comment 4
2012-09-12 12:41:27 PDT
All reviewed patches have been landed. Closing bug.
Sudarsana Nagineni (babu)
Comment 5
2012-09-12 13:44:16 PDT
Thanks for the fix, Chris.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug