[EFL] Compilation error in RenderThemeEfl.cpp https://bugs.webkit.org/show_bug.cgi?id=96540

Unreviewed build fix.

Fix compilation error in RenderThemeEfl.cpp when building
in debug mode.

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-12

* platform/efl/RenderThemeEfl.h:
(WebCore::RenderThemeEfl::canvas):
(WebCore::RenderThemeEfl::edje):

Canonical link: https://commits.webkit.org/114436@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128350 268f45cc-cd09-0410-ab3c-d52691b4dbfc